# CppResizeImage

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  hello_server.cpp
.circleci/: config.yml
src/: CMakeLists.txt  Dockerfile  hello_libasyik.cpp  resize_cv.cpp
web/: CMakeLists.txt  Dockerfile
